added some animation

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
         RICHARD
       </div>
       <nav class="nav-bar-container">
-        <div class="h6">ABOUT</div>
-        <div class="h6">SKILLS</div>
-        <div class="h6">CREATIONS</div>
+        <div class="h6"><a href="#about">ABOUT</a></div>
+        <div class="h6"><a href="#skill">SKILLS</a></div>
+        <div class="h6"><a href="#creation">CREATIONS</a></div>
       </nav>
       <div class="socials">
-        <i class="fa-brands fa-square-github github"></i>
+        <a href="https://github.com/Richard-JR10" target="_blank"><i class="fa-brands fa-square-github github"></i></a>
         <i class="fa-brands fa-linkedin linked-in"></i>
         <i class="fa-brands fa-square-instagram instagram"></i>
       </div>
     </div>
     <div class="line"></div>
   </div>
-  <div class="hero-container">
+  <div id="about" class="hero-container">
     <div class="name-job-container">
       <div class="name">HI I'M RICHARD</div>
       <div class="h1-hero">UX / UI DESIGNER & 
@@ -37,15 +37,15 @@
     </div>
     <div class="p-button-container">
       <div class="paragraph">Step into the world of design and functionality synergy, where I showcase my skills as a UI/UX designer and Full Stack developer. Witness the harmony of creativity and technical expertise, crafting user-centric digital solutions that will elevate your brand's presence.</div>
-      <button class="see-my-creations">
+      <a class="see-my-creations" href="#contact">
         <div>See My Creations</div>
         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
           <path d="M14.5875 25.4125C15.3687 26.1938 16.6375 26.1938 17.4187 25.4125L29.4187 13.4125C30.2 12.6313 30.2 11.3625 29.4187 10.5813C28.6375 9.8 27.3687 9.8 26.5875 10.5813L16 21.1688L5.41249 10.5875C4.63124 9.80625 3.36249 9.80625 2.58124 10.5875C1.79999 11.3688 1.79999 12.6375 2.58124 13.4188L14.5812 25.4188L14.5875 25.4125Z" fill="white"/>
           </svg>
-      </button>
+        </a>
     </div>
   </div>
-  <div class="skill-container">
+  <div id="skill" class="skill-container">
     <div class="skill-title">Skills</div>
     <div class="skill-contain">
       <div class="skill">
@@ -66,7 +66,7 @@
       </div>
     </div>
   </div>
-  <div class="creations-container">
+  <div id="creation" class="creations-container">
     <div class="creation-title-p-contain">
       <div class="skill-title">My Creations</div>
       <div class="creation-paragraph">
@@ -75,14 +75,22 @@
     </div>
     <div class="image-container">
       <div class="background"></div>
-      <div class="image"></div>
+      <div class="image">
+        <div class="glass">
+          <a href="https://github.com/Richard-JR10/interactive-rating-component" target="_blank"><i class="fa-brands fa-github"></i></a>
+        </div>
+      </div>
     </div>
     <div class="image-container">
       <div class="background-2"></div>
-      <div class="image-2"></div>
+      <div class="image-2">
+        <div class="glass">
+          <a href="https://github.com/Richard-JR10/Product-preview-card-component" target="_blank"><i class="fa-brands fa-github"></i></a>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="contact-container">
+  <div id="contact" class="contact-container">
     <div class="contact">
       <div class="skill-title">Let's Connect</div>
       <div class="contact-paragraph">
@@ -125,7 +133,7 @@
         <div class="footer-terms">Terms of Service</div>
       </div>
       <div class="socials-footer">
-        <i class="fa-brands fa-square-github github-footer"></i>
+        <a href="https://github.com/Richard-JR10" target="_blank"><i class="fa-brands fa-square-github github-footer"></i></a>
         <i class="fa-brands fa-linkedin linked-in-footer"></i>
         <i class="fa-brands fa-square-instagram instagram-footer"></i>
       </div>
