--- a/index.html
+++ b/index.html
@@ -21,10 +21,14 @@
         <div class="h6"><a href="#skill">SKILLS</a></div>
         <div class="h6"><a href="#creation">CREATIONS</a></div>
       </nav>
-      <div class="socials">
-        <a href="https://github.com/Richard-JR10" target="_blank"><i class="fa-brands fa-square-github github"></i></a>
-        <i class="fa-brands fa-linkedin linked-in"></i>
-        <i class="fa-brands fa-square-instagram instagram"></i>
+      <div class="right-side-container">
+        <div class="socials">
+          <a href="https://github.com/Richard-JR10" target="_blank"><i class="fa-brands fa-square-github github"></i></a>
+          <i class="fa-brands fa-linkedin linked-in"></i>
+          <i class="fa-brands fa-square-instagram instagram"></i>
+        </div>
+        <div class="vertical-line"></div>
+        <div class="bar"><i class="fa-solid fa-bars bar"></i></div>
       </div>
     </div>
     <div class="line"></div>
